Modified and updated files for sb_3_1_manytomany